# web-scraper

./: .gitignore  LICENSE  README.md  config.json-example  pyproject.toml  requirements.txt  scraper.py  test_scraper.py
.github/workflows/: pylint.yml  test.yml
